# atom

./: .gitignore  .mailmap  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  atom_audit_fix.patch  atom_m3_phase_quantization.patch  atom_readme_fix.patch  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
atom/: __init__.py  attention.py  diffractive.py  noise.py  propagation.py
docs/: benchmarks.md  model.md  runnables.md
examples/: 01_propagate_beam.py  02_train_phase_mask.py  03_optical_attention.py  04_validate_model.py  05_phase_quantization_sweep.py
optic/: attention.py
results/: README.md  expected.json  latest_run.json
results/logs/: example_01_propagate_beam.txt  example_02_train_phase_mask.txt  example_03_optical_attention.txt  example_04_validate_model.txt  example_05_phase_quantization_sweep.txt  unit_tests.txt
scripts/: run_all.py
tests/: test_core.py  test_noise.py  test_validation.py
