[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atom-optic"
version = "0.1.1"
description = "Numerically verified simulation of transformer attention via optical wave interference in holographic crystals"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mprah-Boamey"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.5",
]
keywords = ["optical computing", "holographic", "transformer", "attention", "photonics", "neural networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/mprahboamey/atom"
Repository = "https://github.com/mprahboamey/atom"
 "Bug Tracker" = "https://github.com/mprahboamey/atom/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["atom*"]
